--- a/product-preview-card/style.css
+++ b/product-preview-card/style.css
@@ -86,6 +86,7 @@ body {
         display: grid;
         grid-template-columns: 1fr 1fr;
         max-width: 600px;
+        max-height: 450px;
     }
 
     .product-content {
@@ -93,7 +94,6 @@ body {
     }
 
     .product-img {
-        height: 100%;
         border-radius: 8px 0 0 8px;
     }
 
